fix y scrool when overflow

--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -138,6 +138,7 @@
 }
 
 .Tooltip-handle {
+  z-index: 1;
   cursor: help;
   position: relative;
   display: inline-flex;
